Created Rubric and ScoredRubric collections

--- a/server/api/submission/models/submission.settings.json
+++ b/server/api/submission/models/submission.settings.json
@@ -58,6 +58,10 @@
     },
     "score": {
       "type": "integer"
+    },
+    "scored_rubric": {
+      "via": "submission",
+      "model": "scored-rubric"
     }
   }
 }
