Upated to cell button menu functionality. Input displays on frontend. Needs to send input to backend now

--- a/server/api/rubric/models/rubric.settings.json
+++ b/server/api/rubric/models/rubric.settings.json
@@ -21,7 +21,7 @@
     "criteria": {
       "type": "json"
     },
-    "total_score": {
+    "max_score": {
       "type": "decimal"
     },
     "scored_rubrics": {
