Updated ScoredRubric to reference students and activities

--- a/server/api/activity/models/activity.settings.json
+++ b/server/api/activity/models/activity.settings.json
@@ -50,6 +50,10 @@
     "rubric": {
       "via": "activity",
       "model": "rubric"
+    },
+    "scored_rubric": {
+      "via": "activity",
+      "model": "scored-rubric"
     }
   }
 }
