--- a/server/api/learning-components/documentation/1.0.0/learning-components.json
+++ b/server/api/learning-components/documentation/1.0.0/learning-components.json
@@ -589,6 +589,9 @@
                 "rubric": {
                   "type": "string"
                 },
+                "scored_rubric": {
+                  "type": "string"
+                },
                 "created_by": {
                   "type": "string"
                 },
