--- a/server/api/scored-rubric/models/scored-rubric.settings.json
+++ b/server/api/scored-rubric/models/scored-rubric.settings.json
@@ -24,6 +24,14 @@
     "template_rubric": {
       "via": "scored_rubrics",
       "model": "rubric"
+    },
+    "student": {
+      "model": "student",
+      "via": "scored_rubric"
+    },
+    "activity": {
+      "model": "activity",
+      "via": "scored_rubric"
     }
   }
 }
