Real time server updates from backend with updated logic and object relationships

--- a/server/api/activity/models/activity.settings.json
+++ b/server/api/activity/models/activity.settings.json
@@ -51,9 +51,12 @@
       "via": "activity",
       "model": "rubric"
     },
-    "scored_rubric": {
+    "scored_rubrics": {
       "via": "activity",
-      "model": "scored-rubric"
+      "collection": "scored-rubric"
+    },
+    "title": {
+      "type": "string"
     }
   }
 }
