--- a/server/api/learning-components/documentation/1.0.0/learning-components.json
+++ b/server/api/learning-components/documentation/1.0.0/learning-components.json
@@ -589,7 +589,13 @@
                 "rubric": {
                   "type": "string"
                 },
-                "scored_rubric": {
+                "scored_rubrics": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "title": {
                   "type": "string"
                 },
                 "created_by": {
