--- a/server/api/rubric/models/rubric.settings.json
+++ b/server/api/rubric/models/rubric.settings.json
@@ -15,8 +15,8 @@
       "type": "string"
     },
     "activity": {
-      "model": "activity",
-      "via": "rubric"
+      "via": "rubric",
+      "model": "activity"
     },
     "criteria": {
       "type": "json"
