properly merging teacher-gradebook-view into develop

--- a/server/api/learning-components/documentation/1.0.0/learning-components.json
+++ b/server/api/learning-components/documentation/1.0.0/learning-components.json
@@ -586,6 +586,18 @@
                 "activity_template": {
                   "type": "string"
                 },
+                "rubric": {
+                  "type": "string"
+                },
+                "scored_rubrics": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "title": {
+                  "type": "string"
+                },
                 "created_by": {
                   "type": "string"
                 },
