--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,11 @@ yarn-error.log*
 *.sql
 .cache/
 *.dump
-!blocks_db.dump
-!development_db.dump
-!test_db.dump
-.strapi-updater.json
+
+# !blocks_db.dump
+# !development_db.dump
+# !test_db.dump
+# .strapi-updater.json
 
 # Packages
 *.zip
